Desarrollo de paginas
- Pagina profile
- Pagina marketplace
- creacion de componentes respectivos a sus paginas

--- a/Frontend/conexion-solidaria-fe/index.html
+++ b/Frontend/conexion-solidaria-fe/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Recursive:wght@300..1000&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css"
+    />
+
     <link href="/src/index.css" rel="stylesheet" />
   </head>
   <body>
